# e2e_cli

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-english-dictionary-cli.md  2026-06-18-cache-query-counts.md
docs/superpowers/specs/: 2026-06-17-english-dictionary-cli-design.md
e2e_cli/: __main__.py  cache.py  cli.py  env.py  openai_client.py  render.py
scripts/: setup.ps1
tests/: test_cache.py  test_cli.py  test_env.py  test_openai_client.py  test_package_metadata.py  test_render.py
