[project]
name = "e2e-cli"
version = "0.1.0"
description = "A CLI for English explanations and example sentences using OpenAI."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.68.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
e2e = "e2e_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
